workspace_1.5.1/.metadata/.plugins/org.eclipse.cdt.ui/rosserial_test.build.log
11:54:06 **** Build of configuration Debug for project rosserial_test ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I/home/pranav/STM32CubeIDE/workspace_1.5.1/rosserial_test/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
../Core/Src/stm32f4xx_hal_msp.c:88:23: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
 void HAL_UART_MspInit(UART_HandleTypeDef* huart)
                       ^~~~~~~~~~~~~~~~~~
                       DMA_HandleTypeDef
../Core/Src/stm32f4xx_hal_msp.c:124:25: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
 void HAL_UART_MspDeInit(UART_HandleTypeDef* huart)
                         ^~~~~~~~~~~~~~~~~~
                         DMA_HandleTypeDef
make: *** [Core/Src/subdir.mk:39: Core/Src/stm32f4xx_hal_msp.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:54:07 Build Failed. 3 errors, 0 warnings. (took 739ms)

